Fixed the gap between the two divs

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ h1 {
 
 .rocks {
 	width: 100%;
+	margin-bottom: 0px;
 }
 
 .floating {
